--- a/index.css
+++ b/index.css
@@ -82,6 +82,39 @@ color: #7D7D7D;
     align-items: flex-start;
 }
 
+.slick-slide {
+    width: 100%;
+    margin: 0 60px;
+  }
+  .slick-dots {
+    list-style-type: none;
+    width: 100%;
+    padding: 0px;
+    max-width: 200px;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 10px;
+  }
+  .slick-dots li {
+    display: inline-block;
+  }
+  .slick-dots button {
+    display: inline-block;
+    font-size: 0px;
+    color: #ccc;
+    background-color: #ccc;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    border: 0;
+    margin-left: 6px;
+    margin-right: 6px;
+    outline: none;
+    cursor: pointer;
+  }
+  .slick-active button {
+    background-color: #F27A66; 
+  }
 
 
 
