--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
-*{
+
+* {
     margin: 0;
     padding: 0;
     -webkit-font-smoothing: antialiased;
@@ -6,87 +7,124 @@
     font-family: "Montserrat", sans-serif;
 }
 
-h1{
-font-size: 46px;
-font-weight: 700;
-line-height: 64px;
-letter-spacing: -1.1200000047683716px;
-}
-h2{
-font-size: 24px;
-font-style: normal;
-font-weight: 700;
-line-height: 28px;
-letter-spacing: 0em;
-}
-h3{
-font-size: 18px;
-font-style: normal;
-font-weight: 700;
-line-height: 22px;
-letter-spacing: 0em;
+h1 {
+    font-size: 46px;
+    font-weight: 700;
+    line-height: 64px;
+    margin: 15px 0px;
+    letter-spacing: -1.1200000047683716px;
 }
 
+h2 {
+    font-size: 24px;
+    font-style: normal;
+    margin: 15px 0px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0em;
+}
 
-.center-txt{
+h3 {
+    font-size: 18px;
+    font-style: normal;
+    margin: 10px 0px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0em;
+}
+
+h4 {
+
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    margin: 15px 0px;
+    line-height: 20px;
+    letter-spacing: 0em;
+}
+
+.center-txt {
     text-align: center;
 }
-.drk-blu-txt{
-  color: #14566A;
+
+.drk-blu-txt {
+    color: #14566A;
 }
-.blu-txt{
-  color: #28B1DA;
+
+.blu-txt {
+    color: #28B1DA;
 }
-.gray-txt{
-color: #7D7D7D;
+
+.gray-txt {
+    color: #7D7D7D;
 }
-.orange-txt{
+
+.orange-txt {
     color: #F27A66;
 }
-.blue-shd-gb{
+
+.blue-shd-bg {
     background: linear-gradient(177.97deg, #A3E5FF 1.72%, #FFF1F1 98.52%);
 }
-.pink-shd-bg{
+
+.pink-shd-bg {
     background: linear-gradient(180deg, #FFAFC6 -4.33%, #FFEFD4 109.25%);
 }
-.blu-bg{
+
+.blu-bg {
     color: white;
     background: #28B1DA;
 }
-.pink-bg{
+
+.pink-bg {
     background: #FFF5E7;
 }
-.orange-bg{
+
+.orange-bg {
     background: #F8A425;
     color: white;
 }
-.button{
-    border: none;
- border-radius: 30px;
- padding: 10px 20px;
- margin: 0px 10px;
+
+.white-col {
+    color: white;
 }
-.flex{
+
+.button {
+    border: none;
+    border-radius: 50px;
+    padding: 10px 50px;
+    margin: 0px 10px;
+}
+
+.flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.flex1{
+
+.flex1 {
     display: flex;
-    justify-content:flex-start;
+    justify-content: flex-start;
     align-items: center;
 }
-.flex1-col{
+
+.flex1-col {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+.flex-col2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .slick-slide {
     width: 100%;
     margin: 0 60px;
-  }
-  .slick-dots {
+}
+
+.slick-dots {
     list-style-type: none;
     width: 100%;
     padding: 0px;
@@ -94,11 +132,13 @@ color: #7D7D7D;
     text-align: center;
     margin: 0 auto;
     margin-top: 10px;
-  }
-  .slick-dots li {
+}
+
+.slick-dots li {
     display: inline-block;
-  }
-  .slick-dots button {
+}
+
+.slick-dots button {
     display: inline-block;
     font-size: 0px;
     color: #ccc;
@@ -111,17 +151,59 @@ color: #7D7D7D;
     margin-right: 6px;
     outline: none;
     cursor: pointer;
-  }
-  .slick-active button {
-    background-color: #F27A66; 
-  }
+}
+.slick-active button {
+    background-color: #F27A66;
+}
+section{
+    padding: 30px;
+}
+header nav {
+    padding: 20px 0px;
+    margin: auto;
+    width: 95%;
+}
+#promises {
+    padding: 30px;
+    background: #14566A;
+}
+#promises>div>div {
+    width: 15%;
+    margin: 0px 50px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#manage>div{
+    justify-content: center;
+}
+#manage>div >div{
+    width: 20%;
+ margin: 0px 40px;
+    justify-content: center;
+    padding: 20px;
+    box-shadow: 4px 9px 45px rgba(0, 0, 0, 0.1);
+}
+#form-section{
+    background: #FFF5E7;
 
-
-
-
-
- header nav{
-     padding: 20px 0px;
-margin: auto;
-width: 95%;
+}
+#form-section>div >div{
+    width: 50%;
+    margin-left: 100px;
+}
+#form-section form> input{
+    padding: 20px ;
+    border-radius: 10px;
+    margin:10px 0px;
+    border: 1px solid  #C2C2C2;
+    font-size: 16px;
+    width: 60%;
+background-color: white;
+}
+#form-section form> div input{
+    margin: 0px 20px;
+    width: 30px;
+    height: 30px;
 }
