--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ h4 {
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    margin: 15px 0px;
+    margin: 10px 0px;
     line-height: 20px;
     letter-spacing: 0em;
 }
@@ -176,10 +176,11 @@ header nav {
     align-items: center;
 }
 #manage>div{
+    padding: 40px;
     justify-content: center;
 }
 #manage>div >div{
-    width: 20%;
+    width: 22%;
  margin: 0px 40px;
     justify-content: center;
     padding: 20px;
@@ -206,4 +207,22 @@ background-color: white;
     margin: 0px 20px;
     width: 30px;
     height: 30px;
+}
+#Diabetologists >div{
+    padding: 50px;
+    justify-content: center;
+}
+#Diabetologists >div>div{
+margin: 0px 10px;
+
+border: 2px solid white;
+    width: 28%;
+    border-radius: 30px;
+}
+#Diabetologists >div>div >img{
+    height: 180px;
+    border-radius: 30px;
+}
+#Diabetologists >div>div img{
+    margin-right: 10px;
 }
